--- a/index.html
+++ b/index.html
@@ -3,87 +3,68 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<title>coucou petite perruche</title>
+	<title>Liste - Mangas</title>
+	<style>
+		html{
+			background: #111;
+			color: ghostwhite;
+			font-family: consolas;
+		}
+
+		body{
+			margin: 0;
+		}
+
+		h2{
+			margin: 0;
+			padding: 15px;
+			background: mediumpurple;
+		}
+
+		h3{
+			margin: 0;
+			padding: 10px;
+		}
+
+		.pikachu{
+			background: #222;
+		}
+
+		div{
+			padding-bottom: 20px;
+		}
+
+		a{
+			color: rebeccapurple;
+			border: 2px ridge mediumpurple;
+			text-decoration: none;
+			background: #EEE;
+			padding: 5px;
+			border-radius: 2px;
+			transition: 0.2s all;
+		}
+
+		a:visited{
+			color: rebeccapurple;
+		}
+
+		a:hover{
+			background: mediumpurple;
+			color: ghostwhite;
+			border-radius: 5px;
+		}
+
+	</style>
 </head>
 <body>
-	<span onclick="plusdix()" id='num'>1</span>
-	<div id='plaque' onclick='zoom()'></div>
-	<img src='jp/1.jpg'>
-	<div id='left' onclick='change("-")' class='button'></div>
-	<div id='right' onclick='change("+")' class='button'></div>
-	<div onclick='switchlang()' id='switch' class='button'>switch</div>
+	<center>
+		<h2>Scan en Duolingo</h2>
+		<div class='pikachu'>
+			<h3>Majo no ie | 魔女の家</h3>
+			<a href='read.html?niconiconii=majo no ie/vol1&total=166'>第１ [EN]</a><br>
+		</div>
+		<h3>Yuru Kyan△| ゆるキャン△</h3>
+		<a href='read.html?niconiconii=yuru kyan/vol1&total=181'>第１ [FR]</a>
+	</center>
 </body>
-<script>
-	var lang = 'jp';
-	var page = 1;
-	var zoomed = false;
-	var total = 166;
-	document.getElementsByTagName('img')[0].style.height = '99vh';
-	var windowX = window.innerWidth;
-	if(windowX < 612){
-		document.getElementById('right').style.opacity = '0%';
-		document.getElementById('left').style.opacity = '0%';
-		document.getElementById('plaque').onclick = function(){switchlang()};
-		document.getElementById('switch').style.display = 'none';
-	}
-
-	function switchlang(){
-		if(lang == 'jp'){
-			lang = 'en';
-		}else{
-			lang = 'jp';
-		}
-			document.getElementsByTagName('img')[0].src = lang+'/'+page+'.jpg';
-	}
-
-	function plusdix(){
-		if(page == 1){
-			page = page+8;
-		}else if(page <= 157){
-			page = page+9;
-		}
-		change('+');
-	}
-
-	function change(symb){
-		if(symb == '+'){
-			if(page < 166){
-				page++;
-			}
-		}else{
-			if(page != 1){
-				page--;
-			}
-		}
-			document.getElementsByTagName('img')[0].src = lang+'/'+page+'.jpg';
-			document.getElementById('num').innerHTML = page;
-	}
-
-	function zoom(){
-		if(zoomed == false){
-			document.getElementsByTagName('img')[0].style.height = '200vh';
-			document.getElementById('plaque').style.height = '200vh';
-			zoomed = true;
-		}else{
-			document.getElementsByTagName('img')[0].style.height = '99vh';
-			document.getElementById('plaque').style.height = '99vh';
-			zoomed = false;	
-		}
-	}
-
-	document.addEventListener("keydown", (e) => {
-  		if (e.keyCode == '37'){
-  			change('-');
-  		}
-
-  		if (e.keyCode == '39'){
-  			change('+');
-  		}
-
-		if (e.keyCode == '13'){
-  			switchlang();
-  		}  		
-	});
-</script>
 </html>
