--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
 			<a href='read.html?niconiconii=majo no ie/vol1&total=166'>第１ [EN]</a><br>
 		</div>
 		<h3>Yuru Kyan△| ゆるキャン△</h3>
-		<a href='read.html?niconiconii=yuru kyan/vol1&total=181'>第１ [FR]</a>
+		<a href='read.html?niconiconii=yuru kyan/vol1&total=181'>第１ [FR]</a><br>
+		<h3>Totsukuni Shoujo| とつくに少女</h3>
+		<a href='read.html?niconiconii=totsukuni shoujo/vol1&total=179'>第１ [FR]</a>
 	</center>
 </body>
 </html>
