--- a/index.html
+++ b/index.html
@@ -63,10 +63,12 @@
 			<h3>Majo no ie | 魔女の家</h3>
 			<a href='read.html?niconiconii=majo no ie/vol1&total=166'>第１ [EN]</a><br>
 		</div>
-		<h3>Yuru Kyan△| ゆるキャン△</h3>
-		<a href='read.html?niconiconii=yuru kyan/vol1&total=181'>第１ [FR]</a><br>
 		<h3>Totsukuni Shoujo| とつくに少女</h3>
-		<a href='read.html?niconiconii=totsukuni shoujo/vol1&total=179'>第１ [FR]</a>
+		<a href='read.html?niconiconii=totsukuni shoujo/vol1&total=179'>第１ [FR]</a><br><br>
+		<div class='pikachu'>
+			<h3>Yuru Kyan△| ゆるキャン△</h3>
+			<a href='read.html?niconiconii=yuru kyan/vol1&total=181'>第１ [FR]</a><br>
+		</div>
 	</center>
 </body>
 </html>
